[gd_scene load_steps=11 format=2]

[ext_resource path="res://characters/human/Human.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]
[ext_resource path="res://gui/theme/theme.tres" type="Theme" id=3]
[ext_resource path="res://gui/gui.gd" type="Script" id=4]
[ext_resource path="res://gui/log/log.gd" type="Script" id=5]
[ext_resource path="res://gui/inventory_grid/InventoryGrid.tscn" type="PackedScene" id=6]
[ext_resource path="res://gui/texture_progress/texture_progress.png" type="Texture" id=7]
[ext_resource path="res://gui/inventory_grid/slot/InventorySlot.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.0509804, 0.054902, 0.0588235, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.458824, 0.458824, 0.458824, 1 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.0509804, 0.054902, 0.0588235, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.458824, 0.458824, 0.458824, 1 )

[node name="Player" instance=ExtResource( 1 )]
z_index = 2
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="." index="1"]
offset = Vector2( 89, 63 )
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="." index="2"]

[node name="GUI" type="Control" parent="CanvasLayer" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GUI" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/GUI/HBoxContainer" index="0"]
margin_right = 672.0
margin_bottom = 504.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Control" type="Control" parent="CanvasLayer/GUI/HBoxContainer/VBox" index="0"]
margin_right = 672.0
margin_bottom = 403.0
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="Log" type="PanelContainer" parent="CanvasLayer/GUI/HBoxContainer/VBox" index="1"]
margin_top = 403.0
margin_right = 672.0
margin_bottom = 504.0
grow_vertical = 0
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 5 )

[node name="Label" type="Label" parent="CanvasLayer/GUI/HBoxContainer/VBox/Log" index="0"]
margin_left = 8.0
margin_top = 8.0
margin_right = 664.0
margin_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 3
autowrap = true
clip_text = true

[node name="RightPanel" type="PanelContainer" parent="CanvasLayer/GUI/HBoxContainer" index="1"]
margin_left = 672.0
margin_right = 896.0
margin_bottom = 504.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GUI/HBoxContainer/RightPanel" index="0"]
margin_left = 8.0
margin_top = 8.0
margin_right = 216.0
margin_bottom = 496.0
custom_constants/separation = 8

[node name="HP" type="HBoxContainer" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer" index="0"]
margin_right = 208.0
margin_bottom = 16.0

[node name="Prefix" type="Label" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/HP" index="0"]
margin_top = 1.0
margin_right = 29.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "HP"

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/HP" index="1"]
margin_left = 29.0
margin_right = 147.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
value = 50.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 7 )
tint_under = Color( 0.207843, 0.0666667, 0.0666667, 1 )
tint_progress = Color( 0.701961, 0.109804, 0.109804, 1 )
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4

[node name="Amount" type="Label" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/HP" index="2"]
margin_left = 147.0
margin_top = 1.0
margin_right = 208.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "999/999"
align = 2

[node name="Hunger" type="HBoxContainer" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer" index="1"]
margin_top = 24.0
margin_right = 208.0
margin_bottom = 40.0

[node name="Prefix" type="Label" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/Hunger" index="0"]
margin_top = 1.0
margin_right = 29.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "HG"

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/Hunger" index="1"]
margin_left = 29.0
margin_right = 147.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
value = 50.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 7 )
tint_under = Color( 0.290196, 0.188235, 0.0705882, 1 )
tint_progress = Color( 0.807843, 0.458824, 0.121569, 1 )
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4

[node name="Amount" type="Label" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/Hunger" index="2"]
margin_left = 147.0
margin_top = 1.0
margin_right = 208.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "999/999"
align = 2

[node name="FIL" type="HBoxContainer" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer" index="2"]
margin_top = 48.0
margin_right = 208.0
margin_bottom = 64.0

[node name="Prefix" type="Label" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/FIL" index="0"]
margin_top = 1.0
margin_right = 29.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "FIL"

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/FIL" index="1"]
margin_left = 29.0
margin_right = 147.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
value = 50.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 7 )
tint_under = Color( 0.0235294, 0.188235, 0.0431373, 1 )
tint_over = Color( 0.188235, 0.768627, 0.278431, 1 )
tint_progress = Color( 0.114746, 0.734375, 0.21104, 1 )
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4

[node name="Amount" type="Label" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/FIL" index="2"]
margin_left = 147.0
margin_top = 1.0
margin_right = 208.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "999/999"
align = 2

[node name="Running" type="Label" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer" index="3"]
margin_top = 72.0
margin_right = 208.0
margin_bottom = 86.0
text = "Walking"

[node name="Stamina" type="HBoxContainer" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer" index="4"]
margin_top = 94.0
margin_right = 208.0
margin_bottom = 110.0

[node name="Prefix" type="Label" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/Stamina" index="0"]
margin_top = 1.0
margin_right = 29.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "STA"

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/Stamina" index="1"]
margin_left = 29.0
margin_right = 147.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
value = 50.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 7 )
tint_under = Color( 0.352941, 0.301961, 0.0862745, 1 )
tint_progress = Color( 0.898039, 0.901961, 0.247059, 1 )
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4

[node name="Amount" type="Label" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/Stamina" index="2"]
margin_left = 147.0
margin_top = 1.0
margin_right = 208.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "999/999"
align = 2

[node name="Label" type="Label" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer" index="5"]
margin_top = 118.0
margin_right = 208.0
margin_bottom = 132.0
text = "Inventory"

[node name="PlayerInventory" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer" index="6" instance=ExtResource( 6 )]
margin_top = 140.0
margin_right = 208.0
margin_bottom = 205.0

[node name="InventorySlot" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/PlayerInventory" index="0" instance=ExtResource( 8 )]
margin_left = 4.0
margin_top = 0.0
margin_right = 36.0
margin_bottom = 32.0
index = 1

[node name="InventorySlot2" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/PlayerInventory" index="1" instance=ExtResource( 8 )]
margin_left = 45.0
margin_top = 0.0
margin_right = 77.0
margin_bottom = 32.0
index = 2

[node name="InventorySlot3" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/PlayerInventory" index="2" instance=ExtResource( 8 )]
margin_left = 86.0
margin_top = 0.0
margin_right = 118.0
margin_bottom = 32.0
index = 3

[node name="InventorySlot4" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/PlayerInventory" index="3" instance=ExtResource( 8 )]
margin_left = 127.0
margin_top = 0.0
margin_right = 159.0
margin_bottom = 32.0
index = 4

[node name="InventorySlot5" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/PlayerInventory" index="4" instance=ExtResource( 8 )]
margin_left = 168.0
margin_top = 0.0
margin_right = 200.0
margin_bottom = 32.0
index = 5

[node name="InventorySlot6" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/PlayerInventory" index="5" instance=ExtResource( 8 )]
margin_left = 4.0
margin_top = 33.0
margin_right = 36.0
margin_bottom = 65.0
index = 6

[node name="InventorySlot7" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/PlayerInventory" index="6" instance=ExtResource( 8 )]
margin_left = 45.0
margin_top = 33.0
margin_right = 77.0
margin_bottom = 65.0
index = 7

[node name="InventorySlot8" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/PlayerInventory" index="7" instance=ExtResource( 8 )]
margin_left = 86.0
margin_top = 33.0
margin_right = 118.0
margin_bottom = 65.0
index = 8

[node name="InventorySlot9" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/PlayerInventory" index="8" instance=ExtResource( 8 )]
margin_left = 127.0
margin_top = 33.0
margin_right = 159.0
margin_bottom = 65.0
index = 9

[node name="InventorySlot10" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/PlayerInventory" index="9" instance=ExtResource( 8 )]
margin_left = 168.0
margin_top = 33.0
margin_right = 200.0
margin_bottom = 65.0
index = 10

[node name="Label2" type="Label" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer" index="7"]
margin_top = 213.0
margin_right = 208.0
margin_bottom = 227.0
text = "Ground"

[node name="GroundInventory" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer" index="8" instance=ExtResource( 6 )]
margin_top = 235.0
margin_right = 208.0
margin_bottom = 267.0

[node name="InventorySlot" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/GroundInventory" index="0" instance=ExtResource( 8 )]
margin_left = 4.0
margin_top = 0.0
margin_right = 36.0
margin_bottom = 32.0
index = 1

[node name="InventorySlot2" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/GroundInventory" index="1" instance=ExtResource( 8 )]
margin_left = 45.0
margin_top = 0.0
margin_right = 77.0
margin_bottom = 32.0
index = 2

[node name="InventorySlot3" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/GroundInventory" index="2" instance=ExtResource( 8 )]
margin_left = 86.0
margin_top = 0.0
margin_right = 118.0
margin_bottom = 32.0
index = 3

[node name="InventorySlot4" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/GroundInventory" index="3" instance=ExtResource( 8 )]
margin_left = 127.0
margin_top = 0.0
margin_right = 159.0
margin_bottom = 32.0
index = 4

[node name="InventorySlot5" parent="CanvasLayer/GUI/HBoxContainer/RightPanel/VBoxContainer/GroundInventory" index="4" instance=ExtResource( 8 )]
margin_left = 168.0
margin_top = 0.0
margin_right = 200.0
margin_bottom = 32.0
index = 5

[node name="Item" parent="." index="3"]
visible = true
